fix: Lower the z-index of notifications so they go under the navigation

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -848,7 +848,7 @@ td.p-accordion {
 
 #success:target {
   display: block;
-  z-index: 10;
+  z-index: 9;
 }
 
 #newsletter-signup {
@@ -858,7 +858,7 @@ td.p-accordion {
 
 #newsletter-signup:target {
   display: block;
-  z-index: 10;
+  z-index: 9;
 }
 
 #contact-form-success {
@@ -868,7 +868,7 @@ td.p-accordion {
 
 #contact-form-success:target {
   display: block;
-  z-index: 10;
+  z-index: 9;
 }
 
 #updated {
